[gd_scene load_steps=13 format=3 uid="uid://xh5egcbkopwb"]

[ext_resource type="Texture2D" uid="uid://chd213746fvk1" path="res://assets/sprites/dark_dream/old_man_sprite_sheet.png" id="1_id41t"]
[ext_resource type="Script" path="res://scripts/old_man_interaction.gd" id="2_4brxb"]
[ext_resource type="Texture2D" uid="uid://beh4pnr72b2sx" path="res://assets/blank_frame_bigger.png" id="3_kbta3"]
[ext_resource type="FontFile" uid="uid://b5lqlis8c3a4k" path="res://assets/I-pixel-u.ttf" id="4_lrshh"]
[ext_resource type="PackedScene" uid="uid://c1s8mfal8dbj3" path="res://assets/audio/sound.tscn" id="5_2d4pe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ub41g"]
atlas = ExtResource("1_id41t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bodad"]
atlas = ExtResource("1_id41t")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_47vi6"]
atlas = ExtResource("1_id41t")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hpjn"]
atlas = ExtResource("1_id41t")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ar6tg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub41g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bodad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47vi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hpjn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ouf8"]
size = Vector2(17, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6rp7g"]
size = Vector2(44, 44)

[node name="StaticBody2D" type="StaticBody2D"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_ar6tg")
autoplay = "default"
frame_progress = 0.974387

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, -13)
shape = SubResource("RectangleShape2D_0ouf8")

[node name="interaction" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("2_4brxb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_6rp7g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="BlankFrameBigger" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(578, 524)
scale = Vector2(4, 3.01563)
texture = ExtResource("3_kbta3")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BlankFrameBigger"]
offset_left = -126.0
offset_top = -30.0
offset_right = 126.0
offset_bottom = 30.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/BlankFrameBigger"]
offset_left = -122.0
offset_top = -25.8652
offset_right = -17.0
offset_bottom = -14.8652
theme_override_colors/font_color = Color(0.621524, 0.621524, 0.621524, 1)
theme_override_fonts/font = ExtResource("4_lrshh")
theme_override_font_sizes/font_size = 8

[node name="Sound" parent="." instance=ExtResource("5_2d4pe")]

[connection signal="area_entered" from="interaction" to="interaction" method="_on_area_entered"]
[connection signal="area_exited" from="interaction" to="interaction" method="_on_area_exited"]
